# tower-lsp

crates/json-rpc/: Cargo.toml
crates/json-rpc/src/: error.rs  lib.rs  notification.rs  request.rs  response.rs  router.rs  version.rs
crates/tower-lsp/: Cargo.toml
crates/tower-lsp-macros/src/: lib.rs
crates/tower-lsp/examples/: custom_notification.rs  e2e.rs  stdio.rs  tcp.rs  websocket.rs
crates/tower-lsp/src/: codec.rs  lib.rs  service.rs  transport.rs
crates/tower-lsp/src/service/: client.rs  layers.rs  pending.rs
crates/tower-lsp/src/service/client/: pending.rs  socket.rs
