[package]
name = "tower-lsp-json-rpc"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "JSON-RPC primitives"
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tower = { version = "0.4", default-features = false, features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.94.1"

[dev-dependencies]
tokio = { version = "1.17", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
once_cell = "1"
